btn gap fixed

--- a/src/pages-css/products-page-css/layout-handler.css
+++ b/src/pages-css/products-page-css/layout-handler.css
@@ -127,3 +127,12 @@ a {
     align-items: center;
 }
 
+#text-rating{
+    color: #050505;
+}
+
+.card-btn{
+    display: flex;
+    gap: 5px;
+    justify-content:space-around;
+}
